src/objects/EF_Contact_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>E&amp;F Contact Relationships</relationshipLabel>
        <relationshipName>EF_Contact_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EF_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E&amp;F Relationship</label>
        <referenceTo>EF_Relationship__c</referenceTo>
        <relationshipLabel>E&amp;F Contact Relationships</relationshipLabel>
        <relationshipName>EF_Contact_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Receivable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispute Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>E&amp;F Contact Relationship</label>
    <nameField>
        <displayFormat>E&amp;F CR-{0000}{MM}{YY}</displayFormat>
        <label>E&amp;F Contact Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E&amp;F Contact Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>